--- a/ui/MaterialInspector.ui
+++ b/ui/MaterialInspector.ui
@@ -362,8 +362,41 @@
    </item>
    <item row="0" column="0" colspan="2">
     <widget class="QWidget" name="emissiveWidget" native="true">
-     <layout class="QHBoxLayout" name="horizontalLayout_4">
-      <item>
+     <layout class="QGridLayout" name="gridLayout_2">
+      <item row="2" column="0">
+       <widget class="QLabel" name="label_13">
+        <property name="toolTip">
+         <string>自发光强度，数值越高强度越大</string>
+        </property>
+        <property name="text">
+         <string>光照强度</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="1">
+       <widget class="QLabel" name="labelFactor">
+        <property name="text">
+         <string>20</string>
+        </property>
+       </widget>
+      </item>
+      <item row="2" column="2">
+       <widget class="QSlider" name="horizontalSliderFactor">
+        <property name="minimum">
+         <number>10</number>
+        </property>
+        <property name="maximum">
+         <number>255</number>
+        </property>
+        <property name="value">
+         <number>20</number>
+        </property>
+        <property name="orientation">
+         <enum>Qt::Horizontal</enum>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="0">
        <widget class="QLabel" name="label">
         <property name="toolTip">
          <string>作为光源时的发光颜色</string>
@@ -373,23 +406,19 @@
         </property>
        </widget>
       </item>
-      <item>
-       <layout class="QHBoxLayout" name="horizontalLayout">
-        <item>
-         <widget class="QLabel" name="labelEmissive">
-          <property name="text">
-           <string/>
-          </property>
-         </widget>
-        </item>
-        <item>
-         <widget class="QToolButton" name="toolButtonEmissive">
-          <property name="text">
-           <string>编辑</string>
-          </property>
-         </widget>
-        </item>
-       </layout>
+      <item row="1" column="3">
+       <widget class="QToolButton" name="toolButtonEmissive">
+        <property name="text">
+         <string>编辑</string>
+        </property>
+       </widget>
+      </item>
+      <item row="1" column="1" colspan="2">
+       <widget class="QLabel" name="labelEmissive">
+        <property name="text">
+         <string/>
+        </property>
+       </widget>
       </item>
      </layout>
     </widget>
